fixes #36 adds event filtering. not perfect on small screens, need to redo whole calendar on xs soon...

--- a/src/js/app/efg.eventView/efg.eventView.less
+++ b/src/js/app/efg.eventView/efg.eventView.less
@@ -1,23 +1,37 @@
+@u-event-borderwidth: .125 * @u-unit;
+@u-disabled-opacity: .1;
+
+@c-all:      @c-primary;
+@c-women:    @c-accent-1;
+@c-men:      @c-accent-2;
+@c-kids:     @c-accent-3;
+@c-teens:    @c-accent-4;
+@c-seniors:  @c-accent-5;
+@c-internal: @c-accent-6;
+
 .fc-event {
     background-color: transparent;
     border-color: @c-primary;
-    border-width: 0 0 0 .125 * @u-unit;
+    border-width: 0 0 0 @u-event-borderwidth;
     border-radius: 0;
     
     font-size: .6 * @u-unit;
+    
+    opacity: @u-disabled-opacity;
+    &.is-selected { opacity: 1; }
 
     &,
     &:hover {
         color: @c-content;
     }
     
-    &.is-for-all     { border-color: @c-primary; }
-    &.is-for-women   { border-color: @c-accent-1; }
-    &.is-for-men     { border-color: @c-accent-2; }
-    &.is-for-kids    { border-color: @c-accent-3; }
-    &.is-for-teens   { border-color: @c-accent-4; }
-    &.is-for-seniors { border-color: @c-accent-5; }
-    &.is-internal    { border-color: @c-accent-6; }
+    &.is-for-all     { border-color: @c-all; }
+    &.is-for-women   { border-color: @c-women; }
+    &.is-for-men     { border-color: @c-men; }
+    &.is-for-kids    { border-color: @c-kids; }
+    &.is-for-teens   { border-color: @c-teens; }
+    &.is-for-seniors { border-color: @c-seniors; }
+    &.is-internal    { border-color: @c-internal; }
 }
 
 .fc-content {
@@ -38,6 +52,38 @@
         background: fade(@c-primary, 10);
     }
 }
+
+.eventfilters {
+    padding: 0;
+    list-style: none;
+    text-align: left;
+}
+.eventfilter {
+    opacity: @u-disabled-opacity;
+    &.is-selected { opacity: 1; }
+    
+    label {
+        font-weight: 400;
+        @media (-webkit-min-device-pixel-ratio: 2),
+               (min-resolution: 192dpi) {
+            font-weight: 300;
+        }
+        border-left: 2 * @u-event-borderwidth solid transparent;
+    }
+    
+    input {
+        margin-right: .5 * @u-unit;
+        margin-left: .5 * @u-unit;
+    }
+    
+    &.is-for-all label { border-left-color: @c-all; }
+    &.is-for-women label { border-left-color: @c-women; }
+    &.is-for-men label { border-left-color: @c-men; }
+    &.is-for-kids label { border-left-color: @c-kids; }
+    &.is-for-teens label { border-left-color: @c-teens; }
+    &.is-for-seniors label { border-left-color: @c-seniors; }
+    &.is-internal label { border-left-color: @c-internal; }
+}
  
 @media screen and (max-width: @screen-xs-max) {
     .view-event {
@@ -48,4 +94,9 @@
         .headerbar-brand { margin-right: auto; }
         .headerbar-rightitems { display: none; }
     }
+}
+
+.view-event {
+    padding-top: @u-navbar-height + 2 * @u-unit;
+    padding-bottom: 2 * @u-unit;
 }
